sandc/test/fixtures/astRegression/shouldSucceed/Index.sand
pub class Index {
    ident() {
        a[b]
    }

    dot() {
        a[a.length - 1]
    }

    if_() {
        a[if b { 0 } else { 1 }]
    }

    do_() {
        a[do {
            re d = 2;
            d += 1;
            d
        }]
    }
}