sandc/test/fixtures/astRegression/shouldFail/productions/ifPseudex/EmptyIfBlock.sand
pub class EmptyIfBlock {
    foo() {
        let a = if cond {
            
        } else {
            b
        };
    }
}